# debrid-downloader

./: .gitignore  LICENSE  pyproject.toml
debrid-downloader/debrid_downloader/: config.yml.example
debrid-downloader/debrid_downloader/Service/: real-debrid.py
debrid_downloader/: watcher.py
debrid_downloader/Service/: real-debrid.py  realdebrid.py
debrid_downloader/database/: db.py
